Footer background color now automatically sets height so it looks correct on mobile.

--- a/css/main.scss
+++ b/css/main.scss
@@ -64,7 +64,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 46px;
+  height: auto;
   padding-top: 10px;
   background-color: $gray-lighter;
   color: $gray-dark;
@@ -145,3 +145,4 @@ body {
 	#no-more-tables td:before { content: attr(data-title); }
 }
 /* End No More Tables */
+
